apps/guestbook/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-frontend-deployment
  namespace: guestbook-frontend
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-frontend
  template:
    metadata:
      labels:
        app: guestbook-frontend
    spec:
      containers:
        - image: gcr.io/google-samples/gb-frontend:v5
          name: guestbook-frontend
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
