apps/guestbook/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-frontend-service
  namespace: guestbook-frontend
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: guestbook-frontend
